@@ -41,7 +41,7 @@ for part in $parts; do
 	mountpoint="${part%,*}"
 	size="${part#*,}"
 	if [ "$mountpoint" = "/" ]; then
-		rofssize="$(du -s --block-size=1 /rofs | cut -f1)"
+		rofssize="$(cat /cdrom/casper/filesystem.size)"
 		rootrofssize="$rofssize"
 		rootsize="$size"
 	else
