@@ -1,6 +1,8 @@
 ubiquity (2.1.1) UNRELEASED; urgency=low
 
   * Run success_cmd, error_cmd, and automation_error_cmd as root.
+  * Use /cdrom/casper/filesystem.size instead of calculating the size of
+    /rofs on each run.
 
  -- Evan Dandrea <evand@ubuntu.com>  Wed, 18 Nov 2009 15:17:37 -0600
 
